--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release to TestPyPI
 
 on:
   workflow_dispatch:
@@ -29,13 +29,13 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: dist
+        name: dist-test
         path: dist/
 
   publish:
     needs: build
     runs-on: ubuntu-latest
-    environment: pypi
+    environment: testpypi
     permissions:
       id-token: write
     
@@ -43,10 +43,11 @@ jobs:
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
-        name: dist
+        name: dist-test
         path: dist/
     
-    - name: Publish to PyPI
+    - name: Publish to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         packages-dir: dist/
+        repository-url: https://test.pypi.org/legacy/
